--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #de95e8;
+  /* background-color: #de95e8; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -36,7 +36,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #de95e8;
+  /* background-color: #de95e8; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -51,7 +51,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #de95e8;
+   /* background-color: #de95e8; */
   }
   a:hover {
     color: #747bff;
