--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  box-shadow: inset 0px 10px 30px 0px rgba(216, 47, 232, 0.916);
 }
 
 .logo {
